gitops/argocd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
  labels:
    app.kubernetes.io/name: httproute
    app.kubernetes.io/part-of: argocd
spec:
  parentRefs:
  - name: nginx
    namespace: nginx-gateway
    sectionName: star-sigil-box
  hostnames:
  - "argocd.sigil.box"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: argocd-server
      port: 443
